# titanic_cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  titanic.cpp  titanic.h
data/: obesity.csv  tit_csv.txt
src/: main.cpp  ortool.h  titanic.cpp  titanic.h
